--- a/style/style.css
+++ b/style/style.css
@@ -59,13 +59,17 @@ nav > li {
     justify-content: center;
 }
 
+.main-cover .container {
+    width: 70%;
+}
+
 .main-title {
     font-size: 5rem;
 
 }
 
 .synopsis {
-    width: 40%;
+    width: 50%;
     font-size: 1.5rem;
     line-height: normal;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.658);
@@ -112,3 +116,68 @@ button > span {
     width: 30px;
     margin-right: 15px;
 }
+
+/* Carousel */
+section .container {
+    position: relative;
+}
+
+.carousel {
+    margin-top: -40px;
+    display: flex;
+    overflow:hidden;
+    padding: 20px 0;
+    scroll-behavior: smooth;
+}
+
+.carousel section {
+    display: flex;
+}
+
+.item {
+    padding: 0 2px;
+    transition: 0.25s all;
+}
+    
+.item:hover { 
+      margin: 0 40px;
+      transform: scale(1.2);
+}
+
+.carousel img {
+    width: 341px;
+    border-radius: 4px;
+}
+
+.arrow__btn {
+    position: absolute;
+    color: #fff;
+    text-decoration: none;
+    font-size: 6em;
+    background:rgb(0,0,0);
+    width: 80px;
+    padding: 20px;
+    text-align: center;
+    opacity: 0;
+}
+
+.arrow__btn:hover {
+    position: absolute;
+    color: #fff;
+    text-decoration: none;
+    font-size: 6em;
+    background:rgb(0,0,0);
+    width: 80px;
+    padding: 20px;
+    text-align: center;
+    opacity: 1;
+}
+
+.arrow__btn:nth-of-type(1) {
+    top:20px; bottom:0; left:0;
+    background: linear-gradient(-90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+  }
+  .arrow__btn:nth-of-type(2) {
+    top:20px; bottom:0; right: 0;
+    background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,1) 100%);
+  }
